# SETR_P2_G7

aula10-11/shrmem/shrmem/: prj.conf
aula12-14/lights_control_auto/: CMakeLists.txt  Doxyfile  prj.conf
aula12-14/lights_control_auto/src/: PI_controller.c  PI_controller.h  README.dox  device_drivers.c  device_drivers.h  lights_automation.c  lights_automation.h  main.c
aula12-14/lights_control_manual/: CMakeLists.txt  prj.conf
aula12-14/lights_control_manual/src/: main.c  (+2 more)
aula7-8/: Makefile  device_drivers.h  vending_machine.c  vending_machine.h
aula7-8/NRF_implementation/: CMakeLists.txt  prj.conf
aula7-8/NRF_implementation/include/: device_drivers.h  state_machine.h  vending_machine.h
aula7-8/NRF_implementation/src/: device_drivers.c  start_vending_machine.c  state_machine.c  vending_machine.c
aula7-8/PC_implementation/: CMakeLists.txt  Doxyfile  Makefile  main.c
aula7-8/PC_implementation/include/: device_drivers.h  state_machine.h  vending_machine.h
aula7-8/PC_implementation/src/: device_drivers.c  startVendingMachine.c  start_vending_machine.c  state_machine.c  vending_machine.c
aula7-8/PC_implementation/test/: test_vending_machine.c
aula_2/: Doxyfile  Makefile  main.c  test  vAdd.c  vAdd.h  vAvg.c  vAvg.h  vInit.c  vInit.h
aula_2/html/: files.html  globals.html  globals_func.html  vAdd_8h.html  vAdd_8h__incl.dot  vAdd_8h_source.html  vInit_8h_source.html
aula_3/: .gitignore  Doxyfile  Makefile  MySAG  MySAG_lib.c  MySAG_lib.h  README.dox  main.c
aula_5/: .gitignore  makefile
aula_5/src/: a.out  cmdproc.c
aula_5/test/: testcmdproc.c
(+91 files in other folders)
